Better taskbar update